<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.eviat.mines.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_gravity="center"

        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:layout_marginTop="5dp">

        <RadioButton
        android:text="@string/easy_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20dp"
            android:checked="true"
        android:id="@+id/radioButton6" />

        <RadioButton
            android:text="@string/medium_mode"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/radioButton7"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/hard_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton8"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:text="@string/score_button"
        android:layout_width="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/scoreButton" />

    <ImageButton
        android:layout_width="160dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        app:srcCompat="@drawable/playbutton"
        android:layout_marginTop="50dp"
        android:layout_marginRight="90dp"
        android:id="@+id/imageButton"
        android:layout_centerHorizontal="true" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">


    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:id="@+id/nameText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:gravity="center_horizontal"
        android:inputType="text" />

    <TextView
        android:text="@string/insert_name_label"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />




</RelativeLayout>



</LinearLayout>
